--- a/프로그래머스/1/42576. 완주하지 못한 선수/해시함수 정리.md
+++ b/프로그래머스/1/42576. 완주하지 못한 선수/해시함수 정리.md
@@ -9,3 +9,5 @@
 Python의 hash() 함수는 내장된 해시 함수로, 객체를 해시 가능하게 만드는 데 사용됩니다. 
 1. 이 함수는 객체의 해시 값을 반환하며, 이 해시 값은 해당 객체의 생명 주기 동안 일정하게 유지됩니다. 
 2. 이 함수는 숫자, 문자열, 튜플 등의 불변 객체에 대해 사용할 수 있습니다.
+
+[더 자세한 내용 코드스테이츠 블로그](https://www.codestates.com/blog/content/%EB%B8%94%EB%A1%9D%EC%B2%B4%EC%9D%B8-%ED%95%B4%EC%8B%9C%ED%95%A8%EC%88%98)
